<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.criticalsoftware.springboot</groupId>
  <artifactId>SpringOperationsService</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Spring Operations Webservice</name>
  
  <properties>  
  	<java.version>1.8</java.version>
  	<docker.image.repository>joaosam09/myprivaterepo</docker.image.repository>
  </properties>
  
  <parent>
  	<groupId>org.springframework.boot</groupId>
  	<artifactId>spring-boot-starter-parent</artifactId>
  	<version>2.0.4.RELEASE</version>
  </parent>
  
  <dependencies>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
 		<exclusions>
			<exclusion>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-tomcat</artifactId>
			</exclusion>
		</exclusions>
 	</dependency>  	
  	
  	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-jetty</artifactId>
	</dependency>
	
  	<dependency>
  		<groupId>org.springframework.boot</groupId>
  		<artifactId>spring-boot-starter-test</artifactId>
  	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      
      <plugin>
	  	<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<configuration>
		  <forkCount>3</forkCount>
		  <reuseForks>true</reuseForks>
		  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
		</configuration>
	  </plugin>
	  
      <plugin>
          <groupId>com.spotify</groupId>
          <artifactId>dockerfile-maven-plugin</artifactId>
          <version>1.4.3</version>
          <configuration>
              <repository>${docker.image.repository}</repository>
              <tag>arithmeticOperationsService</tag>
              <buildArgs>
                  <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
              </buildArgs>
          </configuration>
      </plugin>
    </plugins>   
  </build>
</project>